lab1/Test/L1-A-13-76.output
Error Type B at Line 2
Error Type B at Line 3
Error Type B at Line 6
Error Type A at Line 7
Error Type B at Line 12
Error Type A at Line 22
Error Type B at Line 26
Error Type A at Line 27
Error Type B at Line 37
Error Type A at Line 39
Error Type A at Line 45
Error Type B at Line 48
